// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/causality.proto";
import "com/digitalasset/canton/protocol/v0/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v0/participant_transfer.proto";
import "com/digitalasset/canton/protocol/v0/topology.proto";
import "scalapb/scalapb.proto";

// Messages depending on both participant_transaction.proto and participant_transfer.proto.

message SignedProtocolMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Signature signature = 1;

  oneof some_signed_protocol_message {
    bytes mediator_response = 2;
    bytes transaction_result = 3;
    bytes malformed_mediator_request_result = 4;
    bytes transfer_result = 5;
    bytes acs_commitment = 6;
  }
}

message EnvelopeContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_envelope_content {
    InformeeMessage informee_message = 1;
    SignedProtocolMessage signed_message = 2;
    EncryptedViewMessage encrypted_view_message = 3;
    DomainTopologyTransactionMessage domain_topology_transaction_message = 5;
    TransferOutMediatorMessage transfer_out_mediator_message = 6;
    TransferInMediatorMessage transfer_in_mediator_message = 7;
    RootHashMessage root_hash_message = 8;
    RegisterTopologyTransactionRequest register_topology_transaction_request = 9;
    RegisterTopologyTransactionResponse register_topology_transaction_response = 10;
    CausalityMessage causality_message = 11;
  }
}
